Fix for last dropdown to be right aligned

--- a/Source.Vx.Grid/Source.Vx.Grid/scss/vx-grid.scss
+++ b/Source.Vx.Grid/Source.Vx.Grid/scss/vx-grid.scss
@@ -914,6 +914,11 @@
                     -ms-overflow-style: -ms-autohiding-scrollbar;
                     min-width: 300px;
                     width: 100%;
+
+                    &:last-child {
+                        right: -1px;
+                        left: auto;
+                    }
                 }
 
                 line-height: 48px;
@@ -1046,7 +1051,7 @@
                     }
 
                     &::-moz-placeholder { /* Firefox 19+ */
-                         color: rgba(255,255,255,0.80);
+                        color: rgba(255,255,255,0.80);
                     }
 
                     &:-ms-input-placeholder { /* IE 10+ */
